2003-07-19  Stephen Turnbull  <stephen@xemacs.org>

	* etags.el: Change `\\s ' in comments to `\\s-'.
	(tags-explicit-name-pattern, tags-DEFUN-pattern, tags-def-pattern):
	Comment the use of groups.

	* etags.el: Fix bad parsing for completion of good TAGS files.
	(tags-explicit-name-pattern): New constant.
	(tags-DEFUN-pattern, tags-def-pattern): Use it.
	(tags-schemish-pattern): New constant.
	(add-to-tag-completion-table): Intern explicit names when found.

2003-06-18  Nickolay Pakoulin  <npak@ispras.ru>

	* cl-macs.el (cl-transform-lambda): Place doc on Common Lisp
	lambda list after the original doc.  Care about
	#'(lambda () "SingleString")
	(cl-upcase-arg):
	(cl-function-arglist):
	Care about &cl-defs and &cl-quote in lambda list, dotted lists and
	circular data structures in lambda list specification

2003-07-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* derived.el (derived-mode-merge-syntax-tables): Reverse map
	logic.  Fixes "do-nothing" bug.

2003-07-16  Jerry James  <james@xemacs.org>

	* window-xemacs.el (restore-saved-window): Follow first-hchild and
	first-vchild links even when next-child is nil.

2003-07-06  Adrian Aichner  <adrian@xemacs.org>

	* package-get.el (package-get-package-index-file-location): Handle
	missing "EMACSPACKAGEPATH" environment variable.

2003-07-05  Adrian Aichner  <adrian@xemacs.org>

	* package-admin.el (package-admin-find-top-directory): Simplify
	directory comparisions and fix substring errors on short path
	components.
	* package-get.el (package-get-package-index-file-location):
	Default to first component of "EMACSPACKAGEPATH", if set.

2003-06-17  Stephen J. Turnbull  <stephen@xemacs.org>

	* bytecomp.el (byte-compile-lambda): Discard docstring only if it
	is not also the value of the lambda.

2003-06-13  Adrian Aichner  <adrian@xemacs.org>

	* setup-paths.el (paths-emacs-root-p): Don't insist in lib-src
	directory on 'windows-nt, which currently does not have it.

2003-06-11  Adrian Aichner  <adrian@xemacs.org>
