@@ -1,3 +1,9 @@
+2003-07-24  Mike Sperber  <mike@xemacs.org>
+
+	* post-gc.el (simple-finalizer-ephemerons): 
+	(add-finalizer):
+	(cleanup-simple-finalizers): Implement simple object finalization.
+
 2003-07-19  Stephen Turnbull  <stephen@xemacs.org>
 
 	* etags.el: Change `\\s ' in comments to `\\s-'.
